Fix line break on mobile

--- a/style.scss
+++ b/style.scss
@@ -550,12 +550,6 @@ body >footer {
           margin-bottom: 0;
           padding-top: 80px;
         }
-
-        .home-break {
-          @media (max-width: 430px) {
-            display: none;
-          }
-        }
       }
 
       >p {
